# SushiStats

./: README.md  main.py  pyproject.toml
templates/: error.html  friends.html  index.html  noguild.html  slothpixel.html  stats.html  stats2.html
